# codescope

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  NEXT_STEPS.md  README.md  TODO.md
.claude/: CLAUDE.md
benches/: tree_render.rs
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs
src/analysis/: exports.rs  mod.rs
src/bundle/: mod.rs  savings.rs  webpack.rs
src/export/: csv.rs  json.rs  markdown.rs  mod.rs
src/graph/: dependency_graph.rs  mod.rs
src/parser/: mod.rs  package_json.rs  types.rs
src/ui/: app.rs  mod.rs  tree.rs
test-project/: package.json
